
	- Added support for FirePHP::TRACE log style
	- Changed license to New BSD License

2008-06-06 - Release Version: 0.0.2

  - Bugfix - Added usleep() to header writing loop to ensure unique index
  - Bugfix - Ensure chunk_split does not generate trailing "\n" with empty data header
  - Added support for FirePHP::TABLE log style
  
 