@@ -1,0 +1,52 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<package packagerversion="1.7.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0                http://pear.php.net/dtd/tasks-1.0.xsd                http://pear.php.net/dtd/package-2.0                http://pear.php.net/dtd/package-2.0.xsd">
+  
+ <name>FirePHPCore</name>
+ <channel>pear.firephp.org</channel>
+ <summary>Core feature and communication library</summary>
+ <description>Handles all communication between the PHP code on the server and the FirePHP Firefox client extension. Also implements all core FirePHP features.</description>
+ <lead>
+  <name>Christoph Dorn</name>
+  <user>cadorn</user>
+  <email>christoph@christophdorn.com</email>
+  <active>yes</active>
+ </lead>
+ 
+ <date>##DATE##</date>
+ <version>
+  <release>##VERSION##</release>
+  <api>0.1</api>
+ </version>
+ 
+ <stability>
+  <release>##STABILITY##</release>
+  <api>stable</api>
+ </stability>
+ 
+ <license>New BSD</license>
+ 
+ <notes>No Notes</notes>
+ 
+ <contents>
+  <dir name="/" baseinstalldir="FirePHPCore">
+
+   <file name="FirePHP.class.php" role="php"/>
+   <file name="fb.php" role="php"/>
+
+   <file name="demo/oo.php" role="doc" baseinstalldir="FirePHPCore"/>
+   <file name="demo/procedural.php" role="doc" baseinstalldir="FirePHPCore"/>
+
+  </dir>
+ </contents>
+ <dependencies>
+  <required>
+   <php>
+    <min>5.2.5</min>
+   </php>
+   <pearinstaller>
+    <min>1.4.5</min>
+   </pearinstaller>
+  </required>
+ </dependencies>
+ <phprelease />
+</package>
